--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 *{
-    background-color: yellowgreen;
+    margin:0;
+    padding:0;
+}
+.header{
+    display:flex;
+    justify-content: space-between;
+    margin:15px;
+    padding:10px;
+    border: 1px solid black;
+}
+
+.logo{
+   text-decoration: none;
+   color:black;
+}
+
+.nav-items>ul {
+    list-style-type: none;
+    display:flex;
+}
+
+.nav-items>ul>li {
+    padding:10px;
 }
