--- a/style.css
+++ b/style.css
@@ -23,3 +23,19 @@
 .nav-items>ul>li {
     padding:10px;
 }
+
+.card{
+    width:20%;
+    border: 1px solid black;
+    padding:20px;
+    margin:5px;
+}
+
+.card>img{
+    width:100%;
+}
+
+.restraunt-list{
+    display:flex;
+    flex-wrap: wrap;
+}
