--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@
 }
 
 .card{
-    width:20%;
+    width:15%;
     border: 1px solid black;
     padding:20px;
-    margin:5px;
+    margin:4px;
 }
 
 .card>img{
@@ -38,4 +38,29 @@
 .restraunt-list{
     display:flex;
     flex-wrap: wrap;
+}
+
+.search-container{
+    width:100%;
+    padding:20px;
+}
+
+.search-container>input{
+    height:40px;
+    width:60%;
+    margin:20px;
+    padding:5px;
+}
+
+.search-container>button{
+    width:200px;
+    height:50px;
+    background-color: blue;
+    border: 1.5px solid white;
+    border-radius: 7px;
+    color:white;
+}
+
+.search-container>button:hover{
+    cursor: pointer; 
 }
